--- a/mythemes/bootstrap2-dark/templates/base.html
+++ b/mythemes/bootstrap2-dark/templates/base.html
@@ -88,9 +88,9 @@
       <!--</div>-->
     <!--</div>-->
 
-    <div class="container-fluid">
+    <div class="container" style="margin: 'auto'">
       <div class="row">
-        <div class="span9" id="content">
+        <div class="span7" id="content">
             {% block content %}
             {% endblock %}
         </div><!--/span-->
