--- a/mythemes/bootstrap2-dark/templates/article.html
+++ b/mythemes/bootstrap2-dark/templates/article.html
@@ -22,7 +22,13 @@
     {{article.toc}}
 <!-- </div> -->
 {% endif %}
-                {{ article.content }}
+
+                <!-- failed attempt to use section-numbering.css -->
+                <!-- <div id="applyCSS"> -->
+                    <!-- <div> -->
+                    {{ article.content }}
+                    <!-- </div> -->
+                <!-- </div> -->
                 </div><!-- /.entry-content -->
         </article>
 </section>
