--- a/mythemes/bootstrap2-dark/templates/base.html
+++ b/mythemes/bootstrap2-dark/templates/base.html
@@ -10,6 +10,7 @@
     <!-- Le styles -->
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/font-awesome.css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/bootstrap.dark.css" type="text/css" />
+    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/section-numbering.css" type="text/css">
     <style type="text/css">
       body {
         padding-top: 60px;
